[project]
name = "clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Depetris",email = "lucasdepetris14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
